--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
     background-color: rgb(250, 8, 250);
     display: flex;
     justify-content: right;
-    align-items: center;
+    align-items: flex-end;
+    gap: 9px;
 }
 
 .roxo div {
@@ -27,6 +28,7 @@
     display: flex;
     justify-content: right;
     align-items: center;
+    gap: 9px;
 }
 
 .verde div {
@@ -43,6 +45,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 9px;
 
 }
 
@@ -50,5 +53,23 @@
     width: 100px;
     height: 100px;
     background-color: rgb(253, 134, 7);
+    border-radius: 50%;
+}
+
+.amarelo{
+    width: 100vw;
+    height: 200px;
+    background-color: rgb(224, 224, 93);
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    gap: 9px;
+
+}
+
+.amarelo div{
+    width: 100px;
+    height: 100px;
+    background-color: rgb(149, 166, 22);
     border-radius: 50%;
 }
